# fission-creative

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  package.json  product_convergence.json  pyproject.toml  pytest.ini  requirements.txt  skill-check-report-20260724-221915.html  skill-report.html
.hermes-skill/: marketplace.json  plugin.json
agents/: context-agent.md  data-agent.md  deconstruction-agent.md  reviewer.md
dashboard/: server.py
docs/architecture/: overview.md  story-system-phase4.md
docs/guides/: commands.md  rag-and-config.md
docs/operations/: operations.md  plugin-release.md
docs/research/: 2026-04-14-ui-ux-pro-max-skill-architecture-research.md  long-term-memory-research-report.md  storyteller-paper-summary.md
docs/superpowers/plans/: 2026-04-03-phase1-cleanup.md  2026-04-09-v6-migration-completion.md  2026-04-12-story-system-phase1-contract-seed.md  (+10 more)
modules/research/: README.md  deep_explorer.py  evidence_hardening.py  parallel_researcher.py  report_publisher.py  research_planner.py
references/: README.md  detail.md  full-skill.md
references/index/: reference-gap-register.md
references/shared/: cool-points-guide.md  core-constraints.md  strand-weave-pattern.md
scripts/: .coveragerc  __init__.py  archive_manager.py  chapter_outline_loader.py  chapter_paths.py  cli.py  conftest.py  deep_research.py  extract_chapter_context.py  fission_creative_api.py  fission_creative_history_store.py  gpt_researcher_bridge.py  init_project.py  multi_model_query.py  pdf_processor.py  plugin_architecture.py  project_locator.py  quality_trend_report.py  run_tests.ps1  security_utils.py  status_reporter.py  sync_plugin_version.py  webnovel.py
scripts/data_modules/: __init__.py  ai_flavor_engine.py  chapter_commit_schema.py  config.py  context_manager.py  index_entity_mixin.py  index_projection_writer.py  memory_contract_adapter.py  rag_adapter.py  review_schema.py  state_manager.py  state_projection_writer.py  story_contracts.py  webnovel.py
scripts/tests/: test_evidence_hardening.py
skills/webnovel-dashboard/: SKILL.md
skills/webnovel-init/: SKILL.md
skills/webnovel-learn/: SKILL.md
skills/webnovel-plan/: SKILL.md
skills/webnovel-query/: SKILL.md
skills/webnovel-review/: SKILL.md
skills/webnovel-write/: SKILL.md
storytelling/: presentation_beats.py
templates/output/: index-schema.md
tests/: test_cli.py  test_gpt_researcher_bridge.py  test_presentation_beats.py
(+25 files in other folders)
