[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fission-creative"
version = "0.1.0"
description = "Creative content fusion and generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[project.scripts]
fission-creative = "scripts.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120
